// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NPC Infobox buildMonsterInfobox should build monster infobox 1`] = `
Array [
  Array [
    "./out/infobox/npc/1.txt",
    "{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|combat = 100
|size = 2
|hitpoints = 100
|att = 200
|def = 300
|mage = 400
|range = 500
|examine = 
|id = 1
}}

",
  ],
]
`;

exports[`NPC Infobox buildNpcInfobox should build npc infobox 1`] = `
Array [
  Array [
    "./out/infobox/npc/1.txt",
    "{{New Content}}
{{Infobox NPC
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|level = 1
|race = [[Human]]
|location = [[]]
|gender = Male
|options = action1, action2
|map = No
|examine = 
|id = 1
}}
[[File:name chathead.png|left]]
",
  ],
  Array [
    "./out/infobox/npc/1.txt",
    "{{New Content}}
{{Infobox NPC
|image = [[File:undefined.png|120px]]
|members = Yes
|race = [[Human]]
|location = [[]]
|gender = Male
|map = No
|examine = 
|id = 1
}}
[[File:undefined chathead.png|left]]
",
  ],
]
`;
